--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-handlebars-boilerplate",
+  "name": "handlebars-boilerplate",
   "version": "1.0.0",
   "description": "Project 2 Starter",
   "main": "server.js",
@@ -11,6 +11,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "aql": "0.0.3-alpha",
     "dotenv": "^8.0.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
@@ -27,5 +28,17 @@
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
     "prettier": "^1.17.1"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/eotoalex/Project2.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/eotoalex/Project2/issues"
+  },
+  "homepage": "https://github.com/eotoalex/Project2#readme"
 }
