--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "handlebars-boilerplate",
+  "name": "node-handlebars-boilerplate",
   "version": "1.0.0",
   "description": "Project 2 Starter",
   "main": "server.js",
@@ -11,16 +11,10 @@
   },
   "license": "ISC",
   "dependencies": {
-<<<<<<< HEAD
-    "aql": "0.0.3-alpha",
     "dotenv": "^8.0.0",
-=======
-    "dotenv": "^8.2.0",
->>>>>>> 914e941779444684d57cd4df44ad094e5ec073c8
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
-    "mysql": "^2.17.1",
-    "mysql2": "*",
+    "mysql2": "^1.6.5",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {
@@ -32,17 +26,5 @@
     "eslint-plugin-prettier": "^3.1.0",
     "mocha": "^6.1.4",
     "prettier": "^1.17.1"
-  },
-  "directories": {
-    "test": "test"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eotoalex/Project2.git"
-  },
-  "author": "",
-  "bugs": {
-    "url": "https://github.com/eotoalex/Project2/issues"
-  },
-  "homepage": "https://github.com/eotoalex/Project2#readme"
+  }
 }
