--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "animejs": "^3.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
     "express-handlebars": "^3.1.0",
